--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,4 +21,8 @@ jobs:
       - uses: actions/checkout@v2
       - uses: ./
         with:
-          milliseconds: 1000
+          BUY-ME-A-COFFEE-TOKEN: ${{ secrets.BUY_ME_A_COFFEE_TOKEN }}
+          REPOSITORY: ${{github.repository}}
+          GH-TOKEN: ${{ github.token }}
+          NUMBER-OF-MESSAGES: 3
+
