--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "all-with-lint": "npm run build && npm run format && npm run lint && npm run package && npm test",
+    "all-lint": "npm run build && npm run format && npm run package && npm test"
+
   },
   "repository": {
     "type": "git",
