--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
     "all-with-lint": "npm run build && npm run format && npm run lint && npm run package && npm test",
-    "all-lint": "npm run build && npm run format && npm run package && npm test"
+    "all": "npm run build && npm run format && npm run package && npm test"
 
   },
   "repository": {
