--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -25,4 +25,6 @@ jobs:
           REPOSITORY: ${{github.repository}}
           NUMBER-OF-MESSAGES: 3
           GH_TOKEN: ${{ github.token }}
+          COMMIT_MESSAGE: 'Buy me a Coffee messages updated'
+          BRANCH: main
 
