--- a/action.yml
+++ b/action.yml
@@ -34,20 +34,20 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    uses: actions/checkout@v2
-    uses: ./.github/actions/buy-me-a-coffee
-      id: bmac
-      with:
-        BUY_ME_A_COFFEE_TOKEN: ${{ inputs.BUY_ME_A_COFFEE_TOKEN }}
-        NUMBER_OF_MESSAGES: ${{ inputs.NUMBER_OF_MESSAGES }}
-    uses: test-room-7/action-update-file@v1
-      needs: bmac
-      with:
-        file-path: readme.md
-        commit-msg: Update resources
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        repository: ${{ github.repository }}
-        branch: ${{ inputs.BRANCH }}
+    - uses: actions/checkout@v2
+    - uses: ./.github/actions/buy-me-a-coffee
+        id: bmac
+        with:
+          BUY_ME_A_COFFEE_TOKEN: ${{ inputs.BUY_ME_A_COFFEE_TOKEN }}
+          NUMBER_OF_MESSAGES: ${{ inputs.NUMBER_OF_MESSAGES }}
+    - uses: test-room-7/action-update-file@v1
+        needs: bmac
+        with:
+          file-path: readme.md
+          commit-msg: Update resources
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
+          branch: ${{ inputs.BRANCH }}
 
 branding:
   icon: "info"
