--- a/action.yml
+++ b/action.yml
@@ -43,7 +43,7 @@ runs:
       with:
         file-path: readme.md
         commit-msg: Update resources
-        github-token: ${{ secrets.GITHUB_TOKEN }}
+        github-token: ${{ inputs.GH_TOKEN }}
         repository: ${{ github.repository }}
         branch: ${{ inputs.BRANCH }}
 
