repository added to inputs

--- a/.github/actions/buy-me-a-coffee/action.yml
+++ b/.github/actions/buy-me-a-coffee/action.yml
@@ -16,6 +16,11 @@ inputs:
     description: 'Number of the messages to show'
     default: 3
 
+  REPOSITORY:
+    description: "Your GitHub repository"
+    default: ${{ github.repository }}
+    required: false
+
 output:
   MESSAGES_HTML:
     description: 'The latest X messages formatted'
