--- a/action.yml
+++ b/action.yml
@@ -40,6 +40,7 @@ runs:
         BUY_ME_A_COFFEE_TOKEN: ${{ inputs.BUY_ME_A_COFFEE_TOKEN }}
         NUMBER_OF_MESSAGES: ${{ inputs.NUMBER_OF_MESSAGES }}
         GH_TOKEN: ${{ inputs.GH_TOKEN }}
+        REPOSITORY: ${{ inputs.REPOSITORY }}
     - uses: test-room-7/action-update-file@v1
       with:
         file-path: readme.md
