--- a/action.yml
+++ b/action.yml
@@ -47,8 +47,8 @@ runs:
         commit-msg: Update resources
         github-token: ${{ inputs.GH_TOKEN }}
         branch: ${{ inputs.BRANCH }}
-	      committerName: 'Buy Me a Coffee Readme action';
-	      committerEmail: 'noreply@buymeacoffeereadmeaction.com';
+	      committerName: 'Buy Me a Coffee Readme action'
+	      committerEmail: 'noreply@buymeacoffeereadmeaction.com'
 branding:
   icon: "info"
   color: "blue"
