--- a/action.yml
+++ b/action.yml
@@ -35,6 +35,7 @@ runs:
   using: 'composite'
   steps:
     - uses: actions/checkout@v2
+    - uses: actions/setup-node@v1
     - uses: ./.github/actions/buy-me-a-coffee
       with:
         BUY_ME_A_COFFEE_TOKEN: ${{ inputs.BUY_ME_A_COFFEE_TOKEN }}
