--- a/action.yml
+++ b/action.yml
@@ -46,7 +46,7 @@ runs:
         REPOSITORY: ${{ inputs.REPOSITORY }}
     - uses: test-room-7/action-update-file@v1
       with:
-        file-path: readme.md
+        file-path: README.md
         commit-msg: Update resources
         github-token: ${{ inputs.GH_TOKEN }}
         branch: ${{ inputs.BRANCH }}
